Prevent that a long toolbar let the whole page overflow on mobile

--- a/frontend/src/app/features/work-packages/routing/partitioned-query-space-page/partitioned-query-space-page.component.sass
+++ b/frontend/src/app/features/work-packages/routing/partitioned-query-space-page/partitioned-query-space-page.component.sass
@@ -53,6 +53,7 @@
       .title-container
         grid-column: 1 / 2
         grid-row: 2 / 3
+        overflow: hidden
       .toolbar-items
         grid-column: 2 / 3
         grid-row: 2 / 3
