--- a/frontend/src/global_styles/layout/work_packages/_mobile.sass
+++ b/frontend/src/global_styles/layout/work_packages/_mobile.sass
@@ -139,3 +139,4 @@
 
       .toolbar-container
         margin-left: 15px
+        padding-left: 0px !important
